smart education project half done

--- a/Aboutus.html
+++ b/Aboutus.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="AboutUs.css"/>
+    <script src="minipro.js"></script>
 </head>
 <body>
     <header>
@@ -23,11 +24,11 @@
         <h1 class="title" style="margin-left: -784px;margin-top: -72px;color: green;margin-top: -104px;
     "> Delhi Public School mejorgang</h1>
         <nav style="margin-top: -45px;margin-left: 791px;">
-            <a href="#">About Us</a>
-            <a href="#">Admission</a>
-            <a href="#">Academics</a>
-            <a href="#">Student Life</a>
-            <a href="#">Career</a>
+            <a href="#" id="AboutUs" onclick="fun()">AboutUs</a>
+            <a href="#"  id="Adimission" onclick="myadmission()">Admission</a> 
+            <a href="#" id="Academics" onclick="myAcademics()">Academics </a>
+            <a href="#" id="student" onclick="studentlife()">Student Life</a>
+            <a href="#" id="Careers" onclick="studentlife()">Career</a>
         </nav>
     </header>
     <div>
