--- a/career.html
+++ b/career.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="Acadmatic.css"/>
+    <link rel="stylesheet" href="career.css"/>
     <script src="minipro.js"></script>
 </head>
 <body>
@@ -32,13 +32,13 @@
         </nav>
     </header>
     <div>
-        <img src="Academics.webp" style="height: 500px;
+        <img src="career2.jpg" style="height: 700px;
         width: 1536px;"/>
-      <h1 style="margin-top:-100px;color:rgb(255, 255, 255); margin-left: 121px;font-size:50px;">ABOUT CBSE PROGRAMME</h1>
+      <h1 style="margin-top:-100px;color:rgb(255, 255, 255); margin-left: 121px;font-size:50px;">ABOUT Culture at DPS</h1>
   <!--ab ham about me aa rahe hai-->
   </div>
  <div class="container">
-    <h1 style="text-align: center;margin-top: 12px;">CBSE PROGRAMME</h1>
+    <h1 style="text-align: center;margin-top: 12px;">Work and culture</h1>
  <p>The CBSE Program offered by the School is monitored by the Central Board of Secondary Education and is offered from Class IV through Class XII. Initially, when a student enrolls into the School, they get to only choose the CBSE Curriculum, as it one of the most popular and widely accepted boards in the country. An individual may continue to study as a CBSE student until the end of their school tenure. However, they are offered a choice to shift to the CIE (Cambridge) Curriculum before the beginning of Class IX.
 
     The evaluations and assessment models are carefully crafted in accordance with latest CBSE Rules and Regulations and a close check on them is observed by the dedicated CBSE Teacher Coordinator.
