--- a/minipro.html
+++ b/minipro.html
@@ -20,6 +20,7 @@
         margin-left: -1347px;
         margin-top: 78px;
         margin-bottom: 57px;"/>
+         
         <h1 class="title" style="margin-left: -784px;margin-top: -72px;color: green;margin-top: -104px;
        "> Delhi Public School mejorgang</h1>
         <nav style="margin-top: -45px;margin-left: 791px;">
@@ -27,17 +28,26 @@
             <a href="#"  id="Adimission" onclick="myadmission()">Admission</a> 
             <a href="#" id="Academics" onclick="myAcademics()">Academics </a>
             <a href="#" id="student" onclick="studentlife()">Student Life</a>
-            <a href="#">Career</a>
+            <a href="#" id="Careers" onclick="studentlife()">Career</a>
         </nav>
     </header>
-    <div>
+    <!--direct connectiion-->
+
+    <div class="image-container">
         <img src="DelhiPublicSchool-Rampurhat-school-pe.jpg" style="height: 652px;
         width: 1536px;"/>
-    </div>
-
+    <div class="text-overlay">
+        <div>
+            <h1 class="mainweb"><p style="text-align: center;margin-top:6px;">
+        Join Our Community Smart Learning<br><button style="font-size: 32px;margin-top: 23px;
+        background-color:#d1c8c82b;border-radius: 12px;" id="cli" onclick="button()">Join here</button></h1></div>
+    </div>  
+        </div>
+        
+    </div>   
     <!-- next page-->
   <div class="welcome" style="margin-left: 92px; margin-top: 49px;">
-  <h1 style="color: green;">WELCOME TO </h1>
+  <h1 style="color: green;"></h1>
   <H1 style="color:green;">WELCOME TO DELHI PUBLIC SCHOOL SITAMARHI BIHAR</H1>
   </div>
 
